--- a/inventory-backend/src/main/resources/database.properties
+++ b/inventory-backend/src/main/resources/database.properties
@@ -1,4 +1,5 @@
 # PostgreSQL Database Configuration
+# WARNING: DO NOT commit this file with real passwords to version control!
 db.url=jdbc:postgresql://localhost:5432/store_management
 db.username=postgres
 db.password=09090909asa
@@ -9,3 +10,7 @@ db.pool.minimumIdle=5
 db.pool.connectionTimeout=30000
 db.pool.idleTimeout=600000
 db.pool.maxLifetime=1800000
+
+# FIXED: Added leak detection and connection test query
+db.pool.leakDetectionThreshold=60000
+db.pool.connectionTestQuery=SELECT 1
