--- a/inventory-backend/src/main/resources/database.properties
+++ b/inventory-backend/src/main/resources/database.properties
@@ -2,7 +2,7 @@
 # WARNING: DO NOT commit this file with real passwords to version control!
 db.url=jdbc:postgresql://localhost:5432/store_management
 db.username=postgres
-db.password=09090909asa
+db.password=admin123
 
 # HikariCP Connection Pool Settings
 db.pool.maximumPoolSize=10
