--- a/front/package.json
+++ b/front/package.json
@@ -1,24 +1,11 @@
 {
-  "name": "inventory-management-system",
+  "name": "inventory-client",
   "version": "1.0.0",
-  "description": "All Store Stock Management - Inventory Control System",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-builder",
-    "dev": "electron . --dev"
+    "start": "electron ."
   },
-  "keywords": [
-    "inventory",
-    "stock-management",
-    "electron",
-    "desktop-app"
-  ],
-  "author": "Team 1",
-  "license": "MIT",
   "devDependencies": {
-    "electron": "^28.0.0",
-    "electron-builder": "^24.9.1"
-  },
-  "dependencies": {}
+    "electron": "^39.2.7"
+  }
 }
