--- a/inventory-backend/src/main/resources/database.properties
+++ b/inventory-backend/src/main/resources/database.properties
@@ -11,6 +11,6 @@ db.pool.connectionTimeout=30000
 db.pool.idleTimeout=600000
 db.pool.maxLifetime=1800000
 
-# FIXED: Added leak detection and connection test query
+# Added leak detection and connection test query
 db.pool.leakDetectionThreshold=60000
 db.pool.connectionTestQuery=SELECT 1
